--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css">
     <title>PILAR TECNO</title>
 </head>
 <body>
-    <h1> Hola tonoto, welcome tomy litlle page</h1>
+    <h1> Hola tonoto, welcome tomy little page</h1>
     <h2> Espero poder usar bien esto algun día</h2>
-    <h2> Amo a mi amorcito</h2>
+    <h2> Amo mucho a mi amorcito</h2>
+    <section class="form-register">
+        <h4>Fomulario Registro</h4>
+        <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"></input>
+        <input class="controls" type="text" name="apellido" id="apellidos" placeholder="Ingrese sus apellidos"></input>
+        <input class="controls" type="text" name="correo" id="correo" placeholder="Ingrese su correo"></input>
+        <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"></input>
+        <p>Estoy de acurdo con <a href="#">Terminos y Condiciones</a></p>
+        <input class="botons" type="submit" value="Registrar">
+        <p><a href="#">¿Ya tienes una Cuenta?</a></p>
+
+    </section>
     
 </body>
 </html>
