se corrigio el error en el cuarto input en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"></input>
         <input class="controls" type="text" name="apellido" id="apellidos" placeholder="Ingrese sus apellidos"></input>
         <input class="controls" type="text" name="correo" id="correo" placeholder="Ingrese su correo"></input>
-        <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"></input>
+        <input class="controls" type="password" name="contraseña" id="nombre" placeholder="Ingrese su nombre"></input>
         <p>Estoy de acurdo con <a href="#">Terminos y Condiciones</a></p>
         <input class="botons" type="submit" value="Registrar">
         <p><a href="#">¿Ya tienes una Cuenta?</a></p>
