--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>PILAR TECNO</title>
 </head>
 <body>
-    <h1> Hola tonoto, welcome tomy little page </h1>
-    <h2> Espero poder usar bien esto algun día</h2>
-    <h2> Amo mucho a mi amorcito</h2>
+    <h1> Contacto para soporte tecnico  <strong>Sonic</strong></h1>
+    <h2> El mas rapido de toda la ciudad</h2>
+    <h2> :3</h2>
     <section class="form-register">
         <h4>Fomulario Registro</h4>
         <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"></input>
