--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <title>PILAR TECNO</title>
 </head>
 <body>
-    <h1> Hola tonoto, welcome tomy little page </h1>
-    <h2> Espero poder usar bien esto algun día</h2>
-    <h2> Amo mucho a mi amorcito</h2>
+    <h1> POLO TECNOLOGICO LA RIOJA</h1>
+    <h2> MERN STACK 2024</h2>
+    <h2> Trabajo Colaborativo Calificativo</h2>
     <section class="form-register">
         <h4>Fomulario Registro</h4>
         <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"></input>
         <input class="controls" type="text" name="apellido" id="apellidos" placeholder="Ingrese sus apellidos"></input>
         <input class="controls" type="text" name="correo" id="correo" placeholder="Ingrese su correo"></input>
-        <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"></input>
+        <input class="controls" type="password" name="nombre" id="contraseña" placeholder="Ingrese su contraseña" pattern="[a-z0-5]{8,}" required ></input>
+        
         <p>Estoy de acurdo con <a href="#">Terminos y Condiciones</a></p>
         <input class="botons" type="submit" value="Registrar">
         <p><a href="#">¿Ya tienes una Cuenta?</a></p>
-        <h2> Hola que hace</h2>
+        <h2> ROLES</h2>
+        <h3> Product Owner:</h3>
+        <h3> Funcional Analyst:</h3>
+        <h3> Technical Leader: </h3>
+        <h3> Developers: </h3>
     </section>
     
 </body>
